<resources>
    <string name="app_name">WindHound</string>
    <string name="username_message">Username/Email</string>
    <string name="password_message">Password</string>
    <string name="button_login">Login</string>
    <string name="button_forgot">Forgot your password?</string>
    <string name="button_signup">Sign Up</string>
    <string name="title_championship">Championships</string>
    <string name="title_event">Events</string>
    <string name="title_race">Races</string>
    <string name="subtitle_past_races">Past Races</string>
    <string name="button_record">Record</string>
    <string name="button_replay">Replay</string>
    <string name="connection_error">Unable to reach server.</string>
    <string name="connection_loading">Loading...</string>
    <string name="race_name_field">Race name:</string>
    <string name="race_start_date_field">Start date:</string>
    <string name="race_start_time_field">Start time:</string>
    <string name="race_end_date_field">End date:</string>
    <string name="race_end_time_field">End time:</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="race_admins_field">Admins:</string>
    <string name="race_admins_button">Add admins</string>
    <string name="search_hint">Search</string>
    <string name="upcoming_exist">No upcoming races exist.</string>
    <string name="past_exist">No past races exist.</string>
    <string name="title_ongoing">Ongoing</string>
    <string name="title_past">Past</string>
    <string name="button_save">Save</string>
        <string-array name="speed_array">
            <item>x4</item>
            <item>x2</item>
            <item>x1</item>
            <item>x0.5</item>
            <item>x0.25</item>
        </string-array>
    <string name="title_signup">Create account</string>
    <string name="create">Create</string>
    <string name="email_field">Email:</string>
    <string name="password_field">Password:</string>
</resources>
